--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@ hr.small {
   border-radius: 3px;
 }
 
+
 .main-content {
   padding-top: 80px;
 }
@@ -127,6 +128,14 @@ img::-moz-selection {
 img {
   max-width: 100%;
 }
+
+img.logo {
+    max-width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 .disqus-comments {
   margin-top: 30px;
@@ -423,10 +432,9 @@ footer .theme-by {
   height: 192px;
   width: 192px;
   margin-top: -35px;
-  filter: grayscale(90%);
 }
 .post-image:hover {
-  filter: grayscale(0%);
+  filter: brightness(90%);
 }
 .post-image img {
   border-radius: 100px;
@@ -528,7 +536,7 @@ footer .theme-by {
 }
 .intro-header .page-heading h1 {
   margin-top: 0;
-  font-size: 50px;
+  font-size: 40px;
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
